--- a/addons/website_event/static/src/scss/event_templates_page.scss
+++ b/addons/website_event/static/src/scss/event_templates_page.scss
@@ -1,5 +1,6 @@
 .o_wevent_event {
     min-height: calc(95vh - 70px);
+    word-break: break-word;
 
     // Multi-line event title, even in mobile mode
     nav > div > a.navbar-brand {
@@ -22,7 +23,6 @@
     }
 
     .o_wevent_event_title {
-
         .o_wevent_event_name {
             font-weight: $display-font-weight;
             line-height: $display-line-height;
