--- a/addons/website_slides/static/src/scss/website_slides.scss
+++ b/addons/website_slides/static/src/scss/website_slides.scss
@@ -372,6 +372,8 @@ $line-height-truncate: 1.25em;
 
 
 .o_wslides_course_header {
+    word-break: break-word;
+
     @include media-breakpoint-up(md)  {
         @include o-wslides-header-bar();
     }
